# motion-generation

./: .gitignore  config.py  main.py  pyproject.toml
data/: dataset.py  motion_process.py
models/: residual_transformer.py  rvq_vae.py  text_encoder.py  train_transformer.py  transformer.py  vae_blocks.py
scripts/: generate_submission.py  mask_transformer_train.py  process_data.py  submit.py  train_transformer.py  train_transformers.py
utils/: math.py  skeleton.py
